Fix double vertical scrollbar issue

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -182,8 +182,7 @@ body {
 @media screen and (max-width: 800px) {
   
   html,body{
-    overflow-x: hidden;
-  
+      overflow-x: initial !important;
   }
   
   
